--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Deploy to ECS
         run: |
           ssh -o StrictHostKeyChecking=no root@16.176.173.39 << 'EOF'
-          cd /var/www/runningCICD
+          cd /var/www/html/CICD
           git pull origin main
           # Restart Nginx or any other service if needed
           sudo systemctl restart nginx
