--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Deploy to ECS
         run: |
-          ssh -o StrictHostKeyChecking=no root@16.176.173.39 << 'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@16.176.173.39 << 'EOF'
           cd /var/www/html/CICD
           git pull origin main
           # Restart Nginx or any other service if needed
